--- a/frontend/src/styles/facultyLogin.css
+++ b/frontend/src/styles/facultyLogin.css
@@ -20,11 +20,6 @@ span {
 	font-size: 12px;
 }
 
-.error-text {
-	color: red;
-	left: 0;
-}
-
 a {
 	color: #333;
 	font-size: 14px;
@@ -80,7 +75,7 @@ input {
 .login-container {
     display: flex;
     margin: auto;
-    height: 75vh;
+    height: 100%;
     justify-content: center;
     align-items: center;
 }
