--- a/frontend/src/styles/Navbar.css
+++ b/frontend/src/styles/Navbar.css
@@ -165,6 +165,7 @@
     transition: left 0.3s ease-in-out;
     display: flex;
     flex-direction: column;
+    overflow: auto;
   }
   
   .sidebar.open {
@@ -215,4 +216,24 @@
         background-color: transparent;
     }
   }
-  
+
+
+.sidebar::-webkit-scrollbar-track
+{
+	-webkit-box-shadow: inset 0 0 6px rgba(12, 59, 169, 0.3);
+	border-radius: 10px;
+	background-color: #F5F5F5;
+}
+
+.sidebar::-webkit-scrollbar
+{
+	width: 12px;
+	background-color: #F5F5F5;
+}
+
+.sidebar::-webkit-scrollbar-thumb
+{
+	border-radius: 10px;
+	-webkit-box-shadow: inset 0 0 6px rgba(4, 69, 160, 0.89);
+	background-color: rgba(4, 69, 160, 0.89);
+}
