--- a/frontend/src/styles/VideoSection.css
+++ b/frontend/src/styles/VideoSection.css
@@ -1,85 +1,68 @@
 .main-banner {
-    position: relative;
-    max-height: 100%;
-    overflow: hidden;
-    margin-bottom: -7px;
-  }
-  
-  #bg-video {
-      min-width: 100%;
-      min-height: 75vh;
-      max-width: 100%;
-      max-height: 75vh;
-      object-fit: cover;
-      z-index: -1;
-  }
-  
-  #bg-video::-webkit-media-controls {
-      display: none !important;
-  }
-
-  .video-overlay {
-    position: absolute;
-    background-color: rgba(22,34,57,0.85);
-    top: 0;
-    left: 0;
-    bottom: 0px;
-    width: 100%;
-}
-
-.main-banner .caption {
+  position: relative;
+  width: 100%;
+  height: 60vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   text-align: center;
+}
+
+#bg-video {
   position: absolute;
-  width: 80%;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%,-50%);
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  z-index: 0;
+  /* filter: brightness(50%); */
 }
 
-.main-banner .caption h6 {
-  margin-top: 0px;
-  font-size: 18px;
-  text-transform: uppercase;
-  font-weight: 600;
-  color: #fff;
-  letter-spacing: 1px;
+.content {
+  position: relative;
+  z-index: 1;
+  color: white;
+  padding: 20px;
 }
 
-.main-banner .caption h2 {
-  margin-top: 30px;
-  margin-bottom: 30px;
-  font-size: 64px;
-  text-transform: uppercase;
-  font-weight: 800;
-  color: #fff;
-  letter-spacing: 1px;
+.content h1 {
+  font-size: 10rem;
+  margin: 0 0 20px;
+  text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.8)
 }
 
-.main-banner .caption h2 em {
-  font-style: normal;
-  color: #8b352e;
-  font-weight: 900;
+.content p {
+  font-size: 3rem;
+  margin: 0 0 30px;
+  text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.87);
+  line-height: 1;
 }
 
-@media screen and (max-width: 1180px) {
-
-  .main-banner .caption h6 {
-    font-weight: 500;
+@media (max-width: 768px) {
+  .content h1 {
+    font-size: 4rem;
   }
 
-  .main-banner .caption h2 {
-    font-size: 58px;
+  .content p {
+    font-size: 2rem;
   }
 
+  .main-banner {
+    height: 30vh;
+  }
 }
-@media screen and (max-width: 767px) {
 
-  .main-banner .caption h6 {
-    font-weight: 500;
+@media (max-width: 480px) {
+  .content h1 {
+    font-size: 2rem;
   }
 
-  .main-banner .caption h2 {
-    font-size: 36px;
+  .content p {
+    font-size: 1rem;
   }
 
+  .main-banner {
+    height: 30vh;
+  }
 }
