--- a/frontend/src/styles/StaffsLogin.css
+++ b/frontend/src/styles/StaffsLogin.css
@@ -1,166 +1,246 @@
-
-h1 {
-	font-weight: bold;
-	margin: 0;
-}
-
-h2 {
-	text-align: center;
-}
-
-p {
-	font-size: 14px;
-	font-weight: 100;
-	line-height: 20px;
-	letter-spacing: 0.5px;
-	margin: 20px 0 30px;
-}
-
-span {
-	font-size: 12px;
-}
-
-a {
-	color: #333;
-	font-size: 14px;
-	text-decoration: none;
-	margin: 15px 0;
-}
-
-button {
-	border-radius: 20px;
-	border: 1px solid #FF4B2B;
-	background-color: #FF4B2B;
-	color: #FFFFFF;
-	font-size: 12px;
-	font-weight: bold;
-	padding: 12px 45px;
-	letter-spacing: 1px;
-	text-transform: uppercase;
-	transition: transform 80ms ease-in;
-}
-
-button:active {
-	transform: scale(0.95);
-}
-
-button:focus {
-	outline: none;
-}
-
-button.ghost {
-	background-color: transparent;
-	border-color: #FFFFFF;
-}
-
-form {
-	background-color: #FFFFFF;
+.body {
 	display: flex;
-	align-items: center;
 	justify-content: center;
-	flex-direction: column;
-	padding: 0 50px;
-	height: 100%;
-	text-align: center;
-}
-
-input {
-	background-color: #eee;
-	border: none;
-	padding: 12px 15px;
-	margin: 8px 0;
-	width: 100%;
-}
-
-.login-container {
-    display: flex;
-    margin: auto;
-    height: 100%;
-    justify-content: center;
-    align-items: center;
+	align-items: center;
+	min-height: 100vh;
+	background: linear-gradient( 90deg, #e2e2e2, #c9d6ff);
 }
 
 .container1 {
-	background-color: #fff;
-	border-radius: 10px;
-  	box-shadow: 0 14px 28px rgba(0,0,0,0.25), 
-			0 10px 10px rgba(0,0,0,0.22);
 	position: relative;
+	width: 850px;
+	height: 550px;
+	background: #fff;
+	border-radius: 30px;
+	box-shadow: 0 0 30px rgba(0, 0, 0, 0.2);
 	overflow: hidden;
-	width: 768px;
-	min-height: 480px;
+	margin: 20px
 }
 
-.form-container {
+.form-box {
 	position: absolute;
-	top: 0;
-	height: 100%;
-	transition: all 0.6s ease-in-out;
-}
-
-.sign-in-container {
-	left: 0;
-	width: 50%;
-	z-index: 1;
-}
-
-.overlay-container {
-	position: absolute;
-	top: 0;
-	left: 50%;
+	right: 0;
 	width: 50%;
 	height: 100%;
-	overflow: hidden;
-	transition: transform 0.6s ease-in-out;
-}
-
-.overlay {
-	background: #FF416C;
-	background: -webkit-linear-gradient(to right, #FF4B2B, #FF416C);
-	background: linear-gradient(to right, #FF4B2B, #FF416C);
-	background-repeat: no-repeat;
-	background-size: cover;
-	background-position: 0 0;
-	color: #FFFFFF;
-	position: relative;
-	left: -100%;
-	height: 100%;
-	width: 200%;
-  	transform: translateX(0);
-	transition: transform 0.6s ease-in-out;
-}
-
-.overlay-panel {
-	position: absolute;
+	background: #fff;
 	display: flex;
 	align-items: center;
-	justify-content: center;
-	flex-direction: column;
-	padding: 0 40px;
+	color: #333;
 	text-align: center;
-	top: 0;
+	padding: 40px;
+	z-index: 1;
+	transition: .4s ease-in-out 0.8s, visibility 0s 0.8s;
+}
+
+.container1.active .form-box {
+	right: 50%;
+}
+
+.signup {
+	visibility: hidden;
+}
+
+.container1.active .signup {
+	visibility: visible;
+}
+
+form {
+	width: 100%;
+}
+
+.container1 h1{
+    font-size: 36px;
+	margin: -10px 0;
+}
+
+.input-box {
+	position: relative;
+	margin: 30px 0;
+}
+
+.input-box input {
+	width: 100%;
+	padding: 13px 50px 13px 20px;
+	background: #eee;
+	border-radius: 10px;
+	border: none;
+	outline: none;
+	font-size: 16px;
+	color: #333;
+	font-weight: 500;
+}
+
+.input-box input:placeholder {
+	color: #888;
+	font-weight: 400;
+}
+
+.input-box .icon {
+	position: absolute;
+	right: 20px;
+	top: 50%;
+	transform: translateY(-50%);
+	font-size: 20px;
+	color: #888;
+}
+
+.forgot-link {
+	margin: -15px 0 15px;
+}
+
+.forgot-link a {
+	font-size: 14.5px;
+	color: #333;
+	text-decoration: none;
+}
+
+.btn {
+	width: 100%;
+	height: 48px;
+	background: rgb(20, 77, 235);
+	border-radius: 8px;
+	box-shadow: 0 0 10px rgba(o, o, o, 0.1);
+	border: none;
+	cursor: pointer;
+	font-size: 16px;
+	color: #fff;
+	font-weight: 600;
+}
+
+.toggle-box {
+	position: absolute;
+	width: 100%;
 	height: 100%;
+}
+
+.toggle-box::before {
+	content: '';
+	position: absolute;
+	left: -250%;
+	width: 300%;
+	height: 100%;
+	border-radius: 50px;
+	background:rgb(20, 77, 235);
+	z-index: 2;
+	transition: 1.4s ease-in-out;
+}
+
+.container1.active .toggle-box::before {
+	left: 50%;
+}
+
+.toggle-panel {
+	position: absolute;
 	width: 50%;
-	transform: translateX(0);
-	transition: transform 0.6s ease-in-out;
+	height: 100%;
+	display: flex;
+	color: #fff;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	z-index: 2;
+	transition: .4s ease-in-out;
 }
 
-.overlay-right {
+.toggle-left {
+	left: 0;
+	transition-delay: .8s;
+}
+
+.container1.active .toggle-left {
+	left: -50%;
+	transition-delay: .4s;
+}
+
+.toggle-right {
+	right: -50%;
+	transition-delay: .4s;
+
+}
+
+.container1.active .toggle-right {
 	right: 0;
-	transform: translateX(0);
+	transition-delay: .8s;
 }
 
-@media only screen and (max-width: 768px) {
-    .overlay-container {
-        display: none;
-    }
-    
-    .container1 {
-        width: 80%;
-    }
+.toggle-right {
+	right: -50%;
+}
 
-    .sign-in-container {
-        width: 90%;
-        margin-left: 5%;
-    }
+.toggle-panel p {
+	margin: 20px;
+}
+
+.toggle-panel .btn {
+	width: 160px;
+	height: 46px;
+	background: transparent;
+	border: 2px solid #fff;
+	box-shadow: none;
+}
+
+@media screen and (max-width: 650px) {
+	.container1 {
+		height: 80vh;
+	}
+
+	.toggle-panel p {
+		margin: 10px;
+	}
+
+	.form-box {
+		width: 100%;
+		height: 70%;
+		bottom: 0;
+	}
+
+	.container1.active .form-box {
+		right: 0;
+		bottom: 30%;
+	}
+
+	.toggle-box::before {
+		left: 0;
+		top: -270%;
+		width: 100%;
+		height: 300%;
+	}
+
+	.container1.active .toggle-box::before {
+		top: 70%;
+		left: 0;
+	}
+
+	.toggle-panel {
+		width: 100%;
+		height: 30%;
+	}
+
+	.toggle-left {
+		top: 0;
+	}
+
+	.container1.active .toggle-left{
+		left: 0;
+		top: -30%;
+	}
+	
+	.toggle-right {
+		right: 0;
+		bottom: -30%;
+	}
+	
+	.container1.active .toggle-right{
+		bottom: 0;
+	}
+}
+
+@media screen and (max-width: 400px) {
+	.form-box {
+		padding: 20px;
+	}
+
+	.toggle-panel h1 {
+		font-size: 30px;
+	}
 }
