--- a/frontend/src/styles/Footer.css
+++ b/frontend/src/styles/Footer.css
@@ -15,10 +15,13 @@
   .footer .logo-section {
       flex: 1 1 200px;
       text-align: center;
+      justify-content: center;
+      width: 100%;
     }
   
     .footer .logo-section img {
-    max-width: 370px;
+      margin: auto;
+      width: 300px;
   }
   
   .footer .logo-section p {
@@ -153,7 +156,7 @@
     background-color: #004494;
   }
   
-  @media (max-width: 768px) {
+  @media (max-width: 400px) {
     .footer {
         flex-direction: column;
         align-items: center;
@@ -173,6 +176,27 @@
         align-items: center;
         text-align: center;
     }
+
+    .logo-section img {
+      width: 100px;
+    }
+
+    .newsletter-form {
+      display: block;
+     }
+
+    .subscribe-button {
+      width: 100%;
+      margin-top: 10px;
+    }
+
+    .email-input {
+      width: 100%;
+    }
+
+    .coordinator-section {
+      margin-top: 20px;
+    }
   }
 
   .divider {
@@ -188,7 +212,7 @@
     justify-content: center;
     align-items: center;
     color: white;
-}
+  }
 
   .quick-links {
     margin: auto;
@@ -256,7 +280,7 @@
   .copyright {
     margin-top: 10px;
     width: 100%;
-    height: 40px;
+    height: 3rem;
     background-color: black;
     border: 2px 0 solid gray;
     color: white;
@@ -280,4 +304,12 @@
       margin-right: 0;
     }
     
+    .copyright p{
+      font-size: 0.7rem;
+      padding: 2px 0;
+    }
+
+    .coordinator-section {
+      margin-top: 20px;
+    }
   }
