--- a/frontend/src/styles/Navbar.css
+++ b/frontend/src/styles/Navbar.css
@@ -32,7 +32,7 @@
 }
 
 .dropdown-content {
-    margin-top: 17%;
+    margin-top: 10%;
     position: absolute;
     width: 216px; 
     background-color: rgba(0, 0, 0, 0.95);
@@ -55,6 +55,15 @@
     padding-bottom: 15px;
     border-radius: 40px;
     border-bottom: 1px solid #121b2f;
+}
+
+.dropdown:nth-of-type(2) .dropdown-content {
+  margin-top: 8%;
+}
+
+.dropdown-content a:last-child {
+  margin-bottom: 10px;
+  border-bottom: none;
 }
 
 .dropdown:hover .dropdown-content {
@@ -84,7 +93,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    border-bottom: 2px solid rgb(255, 51, 160);
+    border-bottom: 3px solid rgb(255, 51, 160);
     border-radius: 15px;
     transform: scale(0) translateY(50px);
     opacity: 0;
@@ -144,6 +153,7 @@
     display: none;
     flex-direction: column;
     gap: 5px;
+    left: 0;
     cursor: pointer;
   }
   
@@ -203,8 +213,12 @@
   }
   
   /* Responsive Styles */
-  @media screen and (max-width: 768px) {
+  @media screen and (width < 1300px) {
     .navbar-left {
+      display: none;
+    }
+
+    .dropdown {
       display: none;
     }
   
