--- a/frontend/src/styles/UpcomingEvents.css
+++ b/frontend/src/styles/UpcomingEvents.css
@@ -36,11 +36,16 @@
   display: flexbox;
   flex-direction: column;
   text-align: left;
-  border-bottom: 10px solid #7d0024;
+  border-bottom: 10px solid rgb(3, 39, 137);
+}
+
+.Uevent-card:hover {
+  transform: scale(1.05);
+  transition: transform 0.3s ease;
 }
 
 .Uevent-date {
-  background: #7d0024;
+  background: rgb(3, 39, 137);
   color: #fff;
   padding: 10px 0;
   text-align: center;
@@ -72,7 +77,7 @@
 }
 
 .Uevent-title {
-  font-size: 27px;
+  font-size: 1.5rem;
   margin: 10px 0;
 }
 
@@ -96,23 +101,23 @@
 }
 
 .Ulearn-more:hover {
-  background: #5a001a;
+  background: rgb(1, 51, 189);
 }
 
 /* See All Events Button */
 .Usee-all-events {
   margin: 40px 0;
   padding: 10px 30px;
-  border: 2px solid #7d0024;
+  border: 2px solid rgb(3, 39, 137);
   background: transparent;
-  color: #7d0024;
+  color: rgb(3, 39, 137);
   border-radius: 50px;
   cursor: pointer;
   font-size: 20px;
 }
 
 .Usee-all-events:hover {
-  background: #7d0024;
+  background: rgb(1, 51, 189);
   color: #fff;
 }
 
