--- a/main-website/frontend/src/styles/StaffsLogin.css
+++ b/main-website/frontend/src/styles/StaffsLogin.css
@@ -273,7 +273,7 @@ select option:first-child {
 	color: red;
 	text-align: center;
 	font-size: 14px;
-	margin-bottom: 10px;
+	margin: 20px;
   }
   
   .success-message {
