Apply Now backend has been updated

--- a/main-website/frontend/src/styles/VideoSection.css
+++ b/main-website/frontend/src/styles/VideoSection.css
@@ -67,3 +67,27 @@
     height: 30vh;
   }
 }
+
+.apply-scroll-button {
+  margin: 15px;
+  padding: 15px 30px;
+  text-align: center;
+  font-size: 18px;
+  letter-spacing: 1px;
+  text-decoration: none;
+  color: #fff;
+  background: rgb(0, 81, 255);
+  cursor: pointer;
+  transition: ease-out 0.5s;
+  border-radius: 10px;
+  box-shadow: inset 0 0 0 0 green;
+}
+
+.apply-scroll-button:hover {
+  color: white;
+  box-shadow: inset 0 -100px 0 0 green;
+}
+
+.apply-scroll-button:active {
+  transform: scale(0.9);
+}
